--- a/app/assets/stylesheets/rails_admin/imports.css.scss.erb
+++ b/app/assets/stylesheets/rails_admin/imports.css.scss.erb
@@ -4,20 +4,20 @@
 
 /***  Variables  ***/
 
-@import "bootstrap/variables";
+@import "variables";
 @import "rails_admin/base/variables";
 @import "rails_admin/themes/<%= theme %>/variables";
 @import "rails_admin/custom/variables";
 
 /***  Mixins  ***/
 
-@import "bootstrap/mixins";
+@import "mixins";
 @import "rails_admin/base/mixins";
 @import "rails_admin/themes/<%= theme %>/mixins";
 @import "rails_admin/custom/mixins";
 
 /*** Reset ***/
-@import "bootstrap/reset";
+@import "reset";
 
 /***  Libraries  ***/
 
@@ -28,11 +28,11 @@
 
 /***  Bootstrap Theming  ***/
 
-@import "bootstrap/scaffolding";
-@import "bootstrap/type";
-@import "bootstrap/forms";
-@import "bootstrap/tables";
-@import "bootstrap/patterns";
+@import "scaffolding";
+@import "type";
+@import "forms";
+@import "tables";
+@import "patterns";
 
 /***  RailsAdmin Theming  ***/
 
